src/test/deca/context/valid/cast-int-float.deca
// Description:
//    cast int to float
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    (float)(2);
}